# napari-nifti-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  test_plugin.py
.github/workflows/: test.yml
napari_nifti_viewer/: __init__.py  _nifti_loader.py  _widget.py  napari.yaml
tests/: __init__.py  test_basic.py  test_core_functionality.py  test_nifti_loader_isolated.py
